--- a/theme/marketshop1/include/head.phtml
+++ b/theme/marketshop1/include/head.phtml
@@ -14,6 +14,7 @@
 <link rel="stylesheet" type="text/css" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/swipebox/src/css/swipebox.min.css">
 <% end if %>
 <link rel="stylesheet" type="text/css" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/css/responsive.css" />
+<link rel="stylesheet" type="text/css" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/css/custom.css" />
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans' type='text/css'>
 <style>
 label.error {
